utils make working: errors on repeat

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,10 +1,10 @@
-.PHONY: all clean
+.PHONY: all clean SLHA SLHALib
 
 SLHALib_version=2.2
 SLHALib_dir=SLHALib-$(SLHALib_version)
-SLHAlib:
-	echo $(INSTALL_DIR)
-	$(SLHALib_dir)/configure --prefix=$(INSTALL_DIR)
+SLHALib:
+	cd $(SLHALib_dir); \
+		./configure --prefix=$(INSTALL_DIR)
 	$(MAKE) -C $(SLHALib_dir)
 	$(MAKE) -C $(SLHALib_dir) install
 
@@ -12,8 +12,8 @@ SLHA_dir=SLHA
 SLHA:
 	$(MAKE) -C $(SLHA_dir)
 
-all: SLHA SLHAlib
+all: $(SLHA) $(SLHALib)
 
-clea:
+clean:
 	make -C $(SLHALib_dir) clean
 	make -C $(SLHA_version) clean
