--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,39 +1,39 @@
-.PHONY: all clean
-RM=rm
+targets = SLHAClass SLHALib 
+all: $(targets)
 
 SLHALib_version=2.2
 SLHALib_name=SLHALib-$(SLHALib_version)
 SLHALib_dir=$(SLHALib_name)
+SLHALib_lib=$(SLHALib_dir)/build/libSLHA.a
 SLHALib_tar_name=$(SLHALib_name).tar.gz
 SLHALib_remote=http://www.feynarts.de/slha/$(SLHALib_tar_name)
 SLHALib_tarfile=$(TAR_DIR)/$(SLHALib_tar_name)
 
-$(SLHALib_tarfile):
+$(SLHALib_lib):
 ifeq ($(wildcard $(SLHALib_tarfile)),)
 	wget -N -P $(TAR_DIR) $(SLHALib_remote)
 endif
-
-$(SLHALib_dir): $(SLHALib_tarfile)
 ifeq ($(wildcard $(SLHALib_dir)),)
 	tar -xf $(SLHALib_tarfile)
 endif
-
-SLHALib: $(SLHALib_dir)
 	cd $(SLHALib_dir); \
 		./configure --prefix=$(INSTALL_DIR)
 	$(MAKE) -C $(SLHALib_dir)
 	$(MAKE) -C $(SLHALib_dir) install
 
+SLHALib: $(SLHALib_lib)
+
 
 SLHAClass_dir=SLHA
-
-SLHAClass:
+SLHAClass_lib=$(SLHAClass_dir)/libs/libSLHAfile.so
+$(SLHAClass_lib):
 	$(MAKE) -C $(SLHAClass_dir)
 
-#all: SLHALib SLHAClass
+SLHAClass: $(SLHAClass_lib)
 
+.PHONY: clean all
 clean:
 	$(MAKE) -C $(SLHAClass_dir) clean
 	$(MAKE) -C $(SLHALib_dir) clean
-	-$(RM) -f $(SLHALib_tarfile)
-	-$(RM) -rf $(SLHALib_dir)
+	-rm -f $(SLHALib_tarfile)
+	-rm -rf $(SLHALib_dir)
