--- a/predictors/Makefile
+++ b/predictors/Makefile
@@ -1,12 +1,11 @@
-TARDIR=tars/
-SRCDIR=predictors/
 
 # FeynHiggs
 FEYNHIGGS_VERSION=2.9.4
-FEYNHIGGS_SRC_TAR=FeynHiggs-$(FEYNHIGGS_VERSION).tar.gz
+FEYNHIGGS_NAME=FeynHiggs-$(FEYNHIGGS_VERSION)
+FEYNHIGGS_DIR=$(FEYNHIGGS_NAME)
+FEYNHIGGS_SRC_TAR=$(FEYNHIGGS_NAME).tar.gz
 FEYNHIGGS_URL=http://wwwth.mpp.mpg.de/members/heinemey/feynhiggs/newversion/
 FEYNHIGGS_SRC_REMOTE=$(FEYNHIGGS_URL)/$(FEYNHIGGS_SRC_TAR)
-FEYNHIGGS_SRC_DIR=$(SRCDIR)/FeynHiggs-$(FEYNHIGGS_VERSION)/
 FEYNHIGGS_LIBDIR=packages/lib64/
 FEYNHIGGS_LIB=libFH.a
 
