move out to includes

--- a/predictors/Makefile
+++ b/predictors/Makefile
@@ -1,36 +1,3 @@
+PREDICTORS=feynhiggs.mk micromegas.mk
+include $(PREDICTORS)
 
-# FeynHiggs
-FEYNHIGGS_VERSION=2.9.4
-FEYNHIGGS_NAME=FeynHiggs-$(FEYNHIGGS_VERSION)
-FEYNHIGGS_DIR=$(FEYNHIGGS_NAME)
-FEYNHIGGS_SRC_TAR=$(FEYNHIGGS_NAME).tar.gz
-FEYNHIGGS_URL=http://wwwth.mpp.mpg.de/members/heinemey/feynhiggs/newversion/
-FEYNHIGGS_SRC_REMOTE=$(FEYNHIGGS_URL)/$(FEYNHIGGS_SRC_TAR)
-FEYNHIGGS_LIBDIR=packages/lib64/
-FEYNHIGGS_LIB=libFH.a
-
-FEYNHIGGS_SRC_TAR:
-	ifeq($(wildcard $(TARDIR)/$(FEYNHIGGS_SRC_TAR),)
-		wget -N -P $(TARDIR) $(FEYNHIGGS_SRC_REMOTE)
-	endif
-
-FEYNHIGGS: $(TARDIR)/$(FEYNHIGGS_SRC_TAR) 
-
-
-# MicrOmegas
-MICROMEGAS_VERSION=2.4.5
-MICROMEGAS_SRC_TAR=micromegas_$(MICROMEGAS_VERSION).tgz
-MICROMEGAS_URL=http://lapth.in2p3.fr/micromegas/downloadarea/code/
-MICROMEGAS_SRC_REMOTE=$(MICROMEGAS_URL)/$(MICROMEGAS_SRC_TAR)
-MICROMEGAS_SRC_DIR=$(SRCDIR)/micromegas_$(MICROMEGAS_VERSION)/
-MICROMEGAS_LIBDIR=$(MICORMEGAS_SRC_DIR)/sources/
-MICROMEGAS_LIB=micromegas.a
-
-MICROMEGAS_SRC_TAR:
-	if [ ! -e $$(TARDIR) ]; then \
-		wget $$(MICROMEGAS_SRC_REMOTE)
-	#wget -N -P $(TARDIR) $(MICROMEGAS_SRC_REMOTE)
-
-MICROMEGAS: $(TARDIR)/$(MICROMEGAS_SRC_TAR) 
-
-PREDICTORS=$(FEYNHIGGS) $(MICROMEGAS)
