--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "mcrw/predictors/private"]
-	path = mcrw/predictors/private
+[submodule "predictors/private"]
+	path = predictors/private
 	url = git@github.com:hyperfunk/mastercode-predictors.git
