hope that git submodules will now finally work

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 
 [submodule "predictors/private"]
 	path = predictors/private
-	url = git@github.com:hyperfunk/mastercode-predictors.git
+	url = git@github.com:hyperfunk/mastercode-predictors
